tests/typing/bad/testfile-variance-1.scala
class T[-A] { def m():A = m() }
object Main { def main(args: Array[String]) { } }
